UI: Make sure that no scrollbars show up where they shouldn't
In addition, use "isolation: isolate", to prevent "z-index" values from
interfering with those of elements outside the chatbot widget.

--- a/src/chatbot.css
+++ b/src/chatbot.css
@@ -1,17 +1,20 @@
 .-c-widget {
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	display: flex;
 	flex-direction: row;
 	margin: 0;
 	padding: 0;
 	background: #fff;
+	isolation: isolate;
 }
 .-c-widget, .-c-widget * {
 	box-sizing: border-box;
 	scrollbar-color: #cfcfcf transparent; /* in ChatGPT brighter (#ececec) and only for main area */
 	scrollbar-width: thin; /* scrollbar without up/down buttons */
+}
+.-c-widget, .-c-chat-area, .-c-chat {
+	overflow: hidden;
 }
 .-c-widget, .-c-input {
 	font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol;
